--- a/material/.overrides/home.html
+++ b/material/.overrides/home.html
@@ -12,13 +12,13 @@
           <img src="assets/images/illustration.png" alt="" width="1659" height="1200" draggable="false">
         </div>
         <div class="mdx-hero__content">
-          <h1>Technical documentation that just works</h1>
-          <p>{{ config.site_description }}. Set up in 5 minutes.</p>
-          <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
-            Quick start
+          <h1>Dart and Flutter Developers Guide</h1>
+          <p>{{ config.site_description }}</p>
+          <a href="{{ 'dart/' | url }}" title="Guía Dart" class="md-button md-button--primary">
+            Dart
           </a>
-          <a href="{{ 'insiders/' | url }}" title="Material for MkDocs Insiders" class="md-button">
-            Get Insiders
+          <a href="{{ 'flutter/' | url }}" title="Guía Dart" class="md-button md-button--primary">
+            Flutter
           </a>
         </div>
       </div>
