--- a/material/.overrides/main.html
+++ b/material/.overrides/main.html
@@ -6,15 +6,12 @@
   <link rel="stylesheet" href="{{ 'assets/stylesheets/custom.bea7efe8.min.css' | url }}">
 {% endblock %}
 {% block announce %}
-  For updates follow <strong>@squidfunk</strong> on
-  <a rel="me" href="https://fosstodon.org/@squidfunk">
-    <span class="twemoji mastodon">
-      {% include ".icons/fontawesome/brands/mastodon.svg" %}
-    </span>
-    <strong>Fosstodon</strong>
+  Mis Aventuras y desventuras en el mundo Tech en:
+  <a rel="me" href="https://slackdevs.com">
+    <strong>SlackDevs.com</strong>
   </a>
-  and
-  <a href="https://twitter.com/squidfunk">
+  Seguidme en
+  <a href="https://twitter.com/slarrauri">
     <span class="twemoji twitter">
       {% include ".icons/fontawesome/brands/twitter.svg" %}
     </span>
