--- a/material/.overrides/home.html
+++ b/material/.overrides/home.html
@@ -12,14 +12,14 @@
           <img src="assets/images/illustration.png" alt="" width="1659" height="1200" draggable="false">
         </div>
         <div class="mdx-hero__content">
-          <h1>Dart and Flutter Developers Guide</h1>
+          <h1>Guía del Desarrollador Dart and Flutter</h1>
           <p>{{ config.site_description }}</p>
           <a href="{{ 'dart/que_es_dart' | url }}" title="Guía Dart" class="md-button md-button--primary">
-            Dart
+            Comenzar
           </a>
-          <a href="{{ 'flutter/que_es_flutter' | url }}" title="Guía Dart" class="md-button md-button--primary">
+          <!-- <a href="{{ 'flutter/que_es_flutter' | url }}" title="Guía Dart" class="md-button md-button--primary">
             Flutter
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
