--- a/material/.overrides/home.html
+++ b/material/.overrides/home.html
@@ -14,7 +14,7 @@
         <div class="mdx-hero__content">
           <h1>Guía del Desarrollador Dart and Flutter</h1>
           <p>{{ config.site_description }}</p>
-          <a href="{{ 'dart/que_es_dart' | url }}" title="Guía Dart" class="md-button md-button--primary">
+          <a href="{{ 'inicio' | url }}" title="Guía Dart" class="md-button md-button--primary">
             Comenzar
           </a>
           <!-- <a href="{{ 'flutter/que_es_flutter' | url }}" title="Guía Dart" class="md-button md-button--primary">
