--- a/material/.overrides/main.html
+++ b/material/.overrides/main.html
@@ -6,17 +6,18 @@
   <link rel="stylesheet" href="{{ 'assets/stylesheets/custom.bea7efe8.min.css' | url }}">
 {% endblock %}
 {% block announce %}
-  Mis Aventuras y desventuras en el mundo Tech en:
+  Este sitio web es un trabajo en progreso.
+  <!-- Mis Aventuras y desventuras en el mundo Tech en:
   <a rel="me" href="https://slackdevs.com">
     <strong>SlackDevs.com</strong>
-  </a>
+  </a> -->
   Seguidme en
   <a href="https://twitter.com/slarrauri">
     <span class="twemoji twitter">
       {% include ".icons/fontawesome/brands/twitter.svg" %}
     </span>
     <strong>Twitter</strong>
-  </a>
+  </a> 
 {% endblock %}
 {% block scripts %}
   {{ super() }}
